--- a/Readme.html
+++ b/Readme.html
@@ -54,7 +54,6 @@
   </ul><a id="Install"></a>
 
   <h3>Installation</h3>
-
   <h4>Windows, Mac OS X, Linux</h4>
   <ul>
     <li>Open Blender, and click <em>File &gt; User Preferences &gt; Addons &gt; Install from File...</em></li>
@@ -93,6 +92,17 @@
   </ul>
 
   <h2>Change Log</h2>
+  <strong>1.2</strong><br>
+  <em>Codename not available</em><br>
+  (Released ?? ??, 2014)<br>
+  <ul>
+    <li>Added "Spaces between bricks" import option</li>
+    <li>Add link to GitHub issues for easier bug reporting</li>
+    <li>Update and sort contributor names (<a href="https://github.com/le717/LDR-Importer/issues/59">Issue #59</a>)</li>
+    <li>Use Operator Presets to preserve import options (<a href="https://github.com/le717/LDR-Importer/issues/42">Issue #42</a>, <a href="https://github.com/le717/LDR-Importer/issues/65">#65</a>)</li>
+    <li>Update <code>debugPrint()</code> function to display two place milliseconds</li>
+    <li>"LDR-Importer 1.1.5 is five times slower" (<a href="https://github.com/le717/LDR-Importer/issues/61">Issue #61 </a>, <a href="https://github.com/le717/LDR-Importer/pull/73">#73</a>)</li>
+  </ul>
 
   <strong>1.1.5</strong><br>
   <em>Standards</em><br>
@@ -100,20 +110,19 @@
   <ul>
     <li>Read <code>LDConfig.ldr</code> and <code>config.py</code> using <code>UTF-8</code> encoding</li>
     <li>Added support for reading models in <code>UCS-2BE</code> & <code>UCS-2LE</code> encoding
-      (see <a href="https://github.com/le717/LDR-Importer/issues/37">Issue #37</a>)</li>
+      (<a href="https://github.com/le717/LDR-Importer/issues/37">Issue #37</a>)</li>
     <li>Always save <code>config.py</code> in user's <code>AppData</code> on Windows
-      (see <a href="https://github.com/le717/LDR-Importer/issues/38">Issue #38</a>)</li>
+      (<a href="https://github.com/le717/LDR-Importer/issues/38">Issue #38</a>)</li>
     <li>Remove <code>GameFix</code> cleanup option</li>
-    <li>Improve part path lookup (see <a href="https://github.com/le717/LDR-Importer/issues/40">Issue #40</a>,
-      <a href="https://github.com/le717/LDR-Importer/issues/50">#50</a>)</li>
-    <li>Give unofficial files precedence over official ones, correct usage of <code>p/8</code> primitives folder (see
-      <a href="https://github.com/le717/LDR-Importer/issues/52">Issue #52</a>)</li>
+    <li>Improve part path lookup (<a href="https://github.com/le717/LDR-Importer/issues/40">Issue #40</a>,
+      <a href="https://github.com/le717/LDR-Importer/pull/50">#50</a>)</li>
+    <li>Give unofficial files precedence over official ones, correct usage of <code>p/8</code> primitives folder (<a href="https://github.com/le717/LDR-Importer/issues/52">Issue #52</a>)</li>
     <li>Add <a href="https://github.com/MinnieTheMoocher">MinnieTheMoocher</a> to author list</li>
     <li>Reworked display of import options</li>
     <li>Initialize <code>paths</code> array at the beginning of the script</li>
     <li>Fix bug with high-/low-res primitives not being imported properly</li>
     <li><code>debugPrint()</code> behavior was not as expected</li>
-    <li>Fixed issue with multiple edge split modifiers being added to each brick (see <a href="https://github.com/le717/LDR-Importer/issues/57">Issue #57</a>)</li>
+    <li>Fixed issue with multiple edge split modifiers being added to each brick (<a href="https://github.com/le717/LDR-Importer/issues/57">Issue #57</a>)</li>
   </ul>
 
   <strong>1.1</strong><br>
@@ -126,7 +135,7 @@
     <li>Fix string concentration errors</li>
     <li>Fix LEGO brick plastic IOR value</li>
     <li>Fix many PEP 8 line length issues</li>
-    <li>Fix crash when trying to import a non-existent brick (see <a href="https://github.com/le717/LDR-Importer/issues/11">Issue #11</a>)</li>
+    <li>Fix crash when trying to import a non-existent brick (<a href="https://github.com/le717/LDR-Importer/issues/11">Issue #11</a>)</li>
     <li>Detect render engine and use proper materials for it rather than selecting a checkbox</li>
     <li>Allow import on allow import on both case-sensitive and case-insensitive file systems - initial patch submitted via GitHub by
         <a href="https://github.com/Tribex">Tribex</a></li>
@@ -137,19 +146,18 @@
     <li>Majorly updated Markdown documentation files</li>
     <li>Fix possible bug with LDraw installation directory</li>
     <li>New <code>debugPrint()</code> function for easier understanding of message origin ans exactly when it was displayed - patch submitted via GitHub by <a href="https://github.com/Tribex">Tribex</a>
-    (see <a href="https://github.com/le717/LDR-Importer/pull/14">Issue #14</a>)</li>
+    (<a href="https://github.com/le717/LDR-Importer/pull/14">Issue #14</a>)</li>
     <li>"Major error messages now display a small popup when called, notifying the user in Blender's UI,
     <br>instead of silently closing the file select screen and only outputting to the console" - patch submitted via GitHub by
         <a href="https://github.com/Tribex">Tribex</a>
-    (see <a href="https://github.com/le717/LDR-Importer/pull/14">Issue #14</a>)</li>
+    (<a href="https://github.com/le717/LDR-Importer/pull/14">Issue #14</a>)</li>
     <li>"Major error messages now identify what type of error they were, and print the stack trace where necessary" - patch submitted via GitHub by <a href="https://github.com/Tribex">Tribex</a>
-    (see <a href="https://github.com/le717/LDR-Importer/pull/14">Issue #14</a>)</li>
+    (<a href="https://github.com/le717/LDR-Importer/pull/14">Issue #14</a>)</li>
     <li>"Importing files which do not have a .ldr, .dat, or .mpd extension is no longer allowed and will not be attempted,
       <br>and will tell the user through a popup in Blender's UI" - patch submitted via GitHub by <a href="https://github.com/Tribex">Tribex</a>
-      (see <a href="https://github.com/le717/LDR-Importer/pull/14">Issue #14</a>)</li>
+      (<a href="https://github.com/le717/LDR-Importer/pull/14">Issue #14</a>)</li>
     <li>Conversion of single quotes to double quotes where possible</li>
-    <li>Changed new messages from <code>.mpd</code> to <code>.lcd</code> (script does not support MPD models, see
-      <a href="https://github.com/le717/LDR-Importer/issues/7">Issue #7</a>)</li>
+    <li>Changed new messages from <code>.mpd</code> to <code>.lcd</code> (script does not support MPD models, <a href="https://github.com/le717/LDR-Importer/issues/7">Issue #7</a>)</li>
     <li>Reworked internal model cleanup process, now cleaner and better supports future improvements</li>
     <li>More conversion of string concentration from <code>+</code> (plus) signs to <code>str.format()</code> method</li>
     <li>New way of presenting import options, more easily understood and looks nicer too</li>
@@ -161,27 +169,27 @@
     <li>Created script (<code>setup.py</code>) to automatically package release for upload</li>
     <li>Ensure version number for <code>setup.py</code> is in proper format</li>
     <li>Detect LDraw Library of Parts installation on Windows in common locations
-      (see <a href="https://github.com/le717/LDR-Importer/issues/15">Issue #15</a>,
-      <a href="https://github.com/le717/LDR-Importer/issues/16">#16</a>)</li>
+      (<a href="https://github.com/le717/LDR-Importer/issues/15">Issue #15</a>,
+      <a href="https://github.com/le717/LDR-Importer/pull/16">#16</a>)</li>
     <li>Cleaned up <code>GameFix</code> import option code</li>
     <li>Set <code>.ldr</code> file extension as default (per
       <a href="http://www.ldraw.org/article/218.html#extension">http://www.ldraw.org/article/218.html#extension</a>)</li>
     <li>Reversed condition when checking valid file extensions</li>
     <li>"Fixed loading error for models with invalid colors."</li>
-    <li>"Make object color also be viewport color" (see <a href="https://github.com/le717/LDR-Importer/issues/21">Issue #21</a>)</li>
+    <li>"Make object color also be viewport color" (<a href="https://github.com/le717/LDR-Importer/issues/21">Issue #21</a>)</li>
     <li>Display message in console if high-res bricks are being used in the import</li>
     <li>Filter out <code>.pyc</code> files made by Python 2.x in <code>setup.py</code></li>
     <li>Display "This software uses the LDraw Parts Library" image in <code>README.md</code></li>
     <li>Set script encoding to UTF-8</li>
     <li>Small basic materials updates</li>
     <li>Remove <code>.lcd</code> from supported file types (incorrectly assumed to be a standard <code>.ldr</code> file)</li>
-    <li>Store defined LDraw Library of Parts installation path in configuration file, load upon Blender relaunch - 
+    <li>Store defined LDraw Library of Parts installation path in configuration file, load upon Blender relaunch -
       initial patch submitted via GitHub by <a href="https://github.com/Tribex">Tribex</a></li>
     <li>Connected LDraw Library of Parts installation detection to configuration file</li>
     <li>Update <code>debugPrint()</code> function to support lists (for displaying multiple items at once)</li>
     <li>Filter out configuration file made by script in <code>setup.py</code></li>
-    <li>Updated minimum Blender version to 2.67 (see <a href="https://github.com/le717/LDR-Importer/issues/27">Issue #27</a>)</li>
-    <li>Deselect objects in scene before importing (see <a href="https://github.com/le717/LDR-Importer/issues/29">Issue #29</a>)</li>
+    <li>Updated minimum Blender version to 2.67 (<a href="https://github.com/le717/LDR-Importer/issues/27">Issue #27</a>)</li>
+    <li>Deselect objects in scene before importing (<a href="https://github.com/le717/LDR-Importer/issues/29">Issue #29</a>)</li>
     <li>Renamed script to <code>import_ldraw.py</code> to better match other Blender Addons</li>
     <li>Major HTML Readme update</li>
     <li>Give proper error message for missing <code>LDConfig.ldr</code></li>
@@ -198,7 +206,7 @@
     <li>Converted all white space to 4 spaces white space to conform to Python standards using Blender scripting scene</li>
     <li>Added most of <a href="http://sourceforge.net/u/mss02/profile/">Marc Schmitt's</a> Linux patch, with minor changes</li>
     <li>Made LDraw folder paths case-insensitive</li>
-    <li>Added ability to set LDraw System of Tools folder path from within Blender using code from 
+    <li>Added ability to set LDraw System of Tools folder path from within Blender using code from
       <a href="https://github.com/impiaaa/blender-ldraw/">Spencer Alves's LDraw Importer</a></li>
     <li>Added ability to disable automatic model cleanup (remove doubles and recalculate normals). Doing so is <strong>not advised</strong></li>
     <li>Changed <code>dict()</code> to the proper <code>{}</code> syntax</li>
