Add support for LSynth parts
I have tested this with the example model @virtualrepublic sent in #75,
and it works as it should (at least, it looks as if it should on my
end).

--- a/Readme.html
+++ b/Readme.html
@@ -102,6 +102,7 @@
     <li>Use Operator Presets to preserve import options (<a href="https://github.com/le717/LDR-Importer/issues/42">Issue #42</a>, <a href="https://github.com/le717/LDR-Importer/issues/65">#65</a>)</li>
     <li>Update <code>debugPrint()</code> function to display two place milliseconds</li>
     <li>"LDR-Importer 1.1.5 is five times slower" (<a href="https://github.com/le717/LDR-Importer/issues/61">Issue #61 </a>, <a href="https://github.com/le717/LDR-Importer/pull/73">#73</a>)</li>
+    <li>Add support for <a href="http://lsynth.sourceforge.net/">LSynth</a> bendable parts (<a href="https://github.com/le717/LDR-Importer/issues/75">Issue #75</a>, <a href="https://github.com/le717/LDR-Importer/pull/79">#79</a>)</li>
   </ul>
 
   <strong>1.1.5</strong><br>
